packages/typ/tests/fixtures/diagnostics/0866_gadt_equality_cast_mismatch_01.ml.expected
File "0866_gadt_equality_cast_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0866_gadt_equality_cast_mismatch_01 is not a valid module name.

File "0866_gadt_equality_cast_mismatch_01.ml", line 7, characters 20-24:
7 |     | Refl_alpha -> true
                        ^^^^
Error: The constructor true has type bool
       but an expression was expected of type b = a
